# embed_ws

./: .gitignore
projects/basic_cpp/: CMakeLists.txt  build.sh
projects/basic_cpp/include/: utils.hpp
projects/basic_cpp/src/: main.cpp  utils.cpp
projects/practice_cpp/: CMakeLists.txt
projects/practice_cpp/src/: class.cpp  imu_sim.cpp
projects/serial_demo/: CMakeLists.txt  README.md
projects/serial_demo/include/: serial_proto.hpp
projects/serial_demo/src/: time_node.cpp
projects/thread_cpp/: CMakeLists.txt
projects/thread_cpp/src/: atomic.cpp  thread.cpp  timer.cpp
